# traa-py

./: .gitignore  Makefile  README.md  build_all.py  build_all.sh  pyproject.toml  setup.py
examples/: basic_usage.py  enum_sources.py  pyproject.toml
scripts/: publish-prepare.sh  publish-staging.sh  publish.sh
tests/: test.sh  test_traa.py
tools/: test_install.ps1  test_install.py  test_install.sh
