[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "traa"
version = "0.1.4"
description = "Python bindings for the TRAA (To Record Anything Anywhere) library - a high-performance, cross-platform solution for screen capture, window enumeration, and desktop recording. Supports Windows, macOS, and Linux with a clean, Pythonic API."
readme = "README.md"
keywords = [
    "Screen Capturer", "Snapshot", "Desktop Capturer"
]
license = { file = "LICENSE" }
authors = [
  { name = "Sylar", email = "peilinok@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "cffi>=1.17.1",
    "numpy>=2.2.3",
]

[project.urls]
Homepage = "https://github.com/opentraa/traa-py"
Issues = "https://github.com/opentraa/traa-py/issues"

[tool.uv.workspace]
members = ["examples"]
